--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,41 +12,39 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <com.danikule.marqueeview.MarqueeView
         android:id="@+id/mvMarquee"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        />
+        android:background="#33ff00ff" />
 
     <Button
         android:id="@+id/btSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="播放"/>
+        android:text="播放" />
 
     <Button
         android:id="@+id/btChange"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="切换文字"/>
+        android:text="切换文字" />
 
     <TextView
         android:id="@+id/tvAnimView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="这是显示动画的View"
-        android:textSize="28sp"
-        />
+        android:textSize="28sp" />
 
 
     <TextView
         android:id="@+id/tvSpannable"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:gravity="center_vertical"
-        />
+        android:gravity="center_vertical" />
 
 </LinearLayout>
